force-app/main/default/objects/Competitor__c/Competitor__c.object-meta.xml
<CustomObject>
    <description>Used to store competitors at an Opportunity to track against whom a Sale was won/lost.</description>
    <label>Competitor</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Competitor No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>