force-app/main/default/objects/Competitor__c/fields/chk_DealWon__c.field-meta.xml
<CustomField>
    <fullName>chk_DealWon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field indicate if an Opportunity is Lost to a Competitor</description>
    <inlineHelpText>Check this box if the Opportunity was lost because of this competitor.</inlineHelpText>
    <label>Deal Won</label>
    <type>Checkbox</type>
</CustomField>