force-app/main/default/objects/Competitor__c/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <formula>HYPERLINK(&#39;https://bosch-etas--dev.sandbox.lightning.force.com/lightning/r/Competitor__c/a4K9Q0000004TWTUA2/view&#39;, mdr_Competitor__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitor Name</label>
    <type>Text</type>
</CustomField>