force-app/main/default/objects/Competitor__c/fields/mdr_Competitor__c.field-meta.xml
<CustomField>
    <fullName>mdr_Competitor__c</fullName>
    <description>Links the record to the relevant Account that represents the competitor.</description>
    <label>Competitor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You need to select a Competitor record.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Competitor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Competitors</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>