force-app/main/default/objects/Competitor__c/fields/mdr_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>mdr_Opportunity__c</fullName>
    <description>Create connection between Competitor and Opportunity object</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Competitors</relationshipLabel>
    <relationshipName>CompetitorOpportunities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>