force-app/main/default/objects/Competitor__c/fields/txl_Strengths__c.field-meta.xml
<CustomField>
    <fullName>txl_Strengths__c</fullName>
    <description>Known strength of the competitor can be gathered in this field.</description>
    <inlineHelpText>Known strength of the competitor can be gathered in this field.</inlineHelpText>
    <label>Strengths</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>