force-app/main/default/objects/Competitor__c/fields/txl_Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>txl_Weaknesses__c</fullName>
    <description>Captures weakness of a Competitor on a related Opportunity</description>
    <inlineHelpText>Known weaknesses of the competitor can be gathered in this field.</inlineHelpText>
    <label>Weaknesses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>